# 0d_adsorption

./: .gitignore  CMakeLists.txt  CMakePresets.json  calculate_uptake_coefficient.py  experimental_data.json  fit_chained.cpp  main.cpp  model.cpp  model.h  model_chained.cpp  model_chained.h  package.json  plot_chained_reactors.py  plot_fitted_curve.py  plot_out_data.py  plot_run_only.py  plot_sensitivities.py  plot_ssa_xs.py  plot_uptake_rates.py  preformance_comparison.py  preprocess.py  run_chained.cpp  run_only.cpp  simplified_ode_model.py  simplified_ode_model_additional_step.py  simplified_ode_model_reactive_site_distribution.py  simplified_ode_model_site_distribution.py  sorptive_sink.py  switching_function.py  update_dist.ps1  update_dist.sh  vcpkg.json
.github/workflows/: release.yml
paper_plots/: derived_params.py
paper_plots/figure_2/: inset_example.py  levoglucosan_parameter_convergence.json  nacl_parameter_convergence.json  plot_figure_2.py  run_18.json  run_2.json  run_3.json
paper_plots/figure_2/levoglucosan_runs/: input.json  input_1d_model.json  run_1.json  run_10.json  run_1d_model.json  run_1d_model_old.json  run_2.json  run_20.json  run_3.json
paper_plots/figure_2/nacl_runs/: input.json  input_1d_model.json  run_1.json  run_10.json  run_18.json  run_1d_model.json  run_1d_model_old.json  run_20.json  run_3.json
paper_plots/figure_3/: fitted.json  levoglucosan_drift_corrected.json  levoglucosan_fitted.json  nacl_drift_corrected.json  nacl_fitted.json  plot_figure_3.py  plot_figure_4.py  plot_figure_4_small.py
paper_plots/figure_5/: add_noise.py  generate_data_with_noise.py  plot_figure_5.py  run2drift_corrected.py  run_all_fits.py
paper_plots/figure_5/combo_1/: parameter_convergence.json  run_100.json  run_200.json  run_300.json  run_400.json  run_500.json  run_600.json  run_600_noise.json
paper_plots/figure_5/combo_1/run_100_fit/: drift_corrected.json
paper_plots/figure_5/combo_1/run_500_fit/: drift_corrected.json  fitted.json
paper_plots/figure_parameter_exploration/: plot_figure.py
paper_plots/figure_parameter_exploration/S_tot/: 0.30.json  3.00.json  run_0.30.json  run_3.00.json
paper_plots/figure_parameter_exploration/Y_tot/: 0.30.json  3.00.json  original.json  run_0.30.json  run_3.00.json
paper_plots/figure_parameter_exploration/k_ads/: 0.30.json  0.60.json  0.90.json  1.10.json  1.50.json  3.00.json  run_0.30.json  run_0.60.json  run_0.90.json  run_1.10.json  run_1.50.json  run_3.00.json
paper_plots/figure_parameter_exploration/k_des/: 0.30.json  3.00.json  run_0.30.json  run_3.00.json
paper_plots/figure_parameter_exploration/k_rxn/: 0.30.json  3.00.json  run_0.30.json  run_3.00.json  run_original.json
run_only/: input.json  run.json  run_100.json  run_200.json  run_300.json  run_400.json  run_500.json  run_600.json
run_only/NaCl/: input.json  run-1.json  run-2.json  run-3.json  run-4.json  run-5.json
uptake_curve_processing/: uptake_curves.xlsx
uptake_curve_processing/NaCl/: drift_corrected.json  fitted.json
uptake_curve_processing/NaCl-2/: drift_corrected.json  fitted.json
uptake_curve_processing/NaCl-3/: drift_corrected.json  fitted.json
uptake_curve_processing/NaCl-4/: drift_corrected.json  fitted.json
uptake_curve_processing/NaCl-5/: drift_corrected.json  fitted.json
uptake_curve_processing/NaCl-6/: drift_corrected.json  fitted.json
uptake_curve_processing/levoglucosan/: drift_corrected.json  fitted.json
